SUBDIRS =

INCLUDES = \
	-DG_LOG_DOMAIN=\"Transition\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	-I$(includedir) \
	$(GTK_CFLAGS)

lib_LTLIBRARIES = libtransition.la

libtransition_la_SOURCES = \
	animator.c animator.h

pkgincludedir=$(includedir)/transition
pkginclude_HEADERS = \
	animator.h

BUILT_SOURCES =

CLEANFILES =

EXTRA_DIST =

