
pkgincludedir=$(includedir)/waveform
pkginclude_HEADERS = \
	typedefs.h \
	waveform.h \
	peakgen.h \
	promise.h \
	utils.h \
	ui-typedefs.h \
	view_plus.h \
	actor.h \
	context.h \
	shader.h \
	fbo.h \
	texture_cache.h \
	private.h \
	ui-private.h


EXTRA_DIST = \
	actor.h \
	audio.h \
	background.h \
	context.h \
	debug.h \
	fbo.h \
	grid.h \
	group.h \
	labels.h \
	pixbuf.h \
	plain.h \
	private.h \
	promise.h \
	ruler.h \
	shader.h \
	spinner.h \
	spp.h \
	text.h \
	texture_cache.h \
	transition_behaviour.h \
	typedefs.h \
	ui-private.h \
	ui-typedefs.h \
	ui-utils.h \
	utils.h \
	view_plus.h \
	waveform.h \
	worker.h
